# CuantAmp

./: .env.sample  .gitignore  README.md  dev-setup.sh  docker-compose.yml
api/: Dockerfile  config.py  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 1c3642bfed05_add_tweetUsers_and_tweets_tables.py  44a30c0de571_add_metrics_tables_for_twitterusers_and_.py
api/data/: politicxs.csv
api/db/: __init__.py  base.py  seed.py  session.py
api/tusers/: controller.py  models.py  router.py  schemas.py
api/tweets/: controller.py  models.py  router.py  schemas.py
api/users/: models.py  router.py
pipeline/: Dockerfile  pyproject.toml
ui/: Dockerfile  package-lock.json  package.json
