[tool.poetry]
name = "CuantAmpAPI"
version = "0.1.0"
description = ""
authors = ["Lucas Bellomo <@lbellomo>", "Franco Bellomo <@fnbellomo>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
alembic = "^1.6.5"
SQLAlchemy = "^1.4.20"
psycopg2 = "^2.9.1"
pandas = "1.2.5"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
